force-app/main/default/objects/Opportunity/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Approval status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>