force-app/main/default/objects/Opportunity/fields/Create_asset__c.field-meta.xml
<CustomField>
    <fullName>Create_asset__c</fullName>
    <label>Create_asset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>