force-app/main/default/objects/Opportunity/fields/CreateProject__c.field-meta.xml
<CustomField>
    <fullName>CreateProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateProject</label>
    <type>Checkbox</type>
</CustomField>