force-app/main/default/objects/Opportunity/fields/Days_Since_Opty_Created__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Opty_Created__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Opty Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>