force-app/main/default/objects/Opportunity/fields/Discount_Percent_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent_Status__c</fullName>
    <label>Discount Percent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved,</fullName>
            </value>
            <value>
                <fullName>Not Approved,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>