force-app/main/default/objects/Opportunity/fields/Opp_Location_c__c.field-meta.xml
<CustomField>
    <fullName>Opp_Location_c__c</fullName>
    <label>Opp_Location__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>