force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>