force-app/main/default/objects/Opportunity/fields/TestPhoneOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TestPhoneOpportunity__c</fullName>
    <label>TestPhoneOpportunity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>