force-app/main/default/objects/Opportunity/recordTypes/Sales_RT.recordType-meta.xml
<RecordType>
    <fullName>Sales_RT</fullName>
    <active>true</active>
    <businessProcess>XYZ AC</businessProcess>
    <label>Sales RT</label>
</RecordType>