force-app/main/default/objects/Opportunity/recordTypes/Service_RT.recordType-meta.xml
<RecordType>
    <fullName>Service_RT</fullName>
    <active>true</active>
    <businessProcess>XYZ AC</businessProcess>
    <label>Service RT</label>
</RecordType>