force-app/main/default/objects/Opportunity/validationRules/Type_New_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_New_Customer</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(StageName) = &apos;Closed Won&apos; &amp;&amp;  TEXT(DeliveryInstallationStatus__c) = &apos;Completed&apos; &amp;&amp;  TEXT(Type) &lt;&gt; &apos;New Customer&apos;</errorConditionFormula>
    <errorMessage>Type must ne New Customer</errorMessage>
</ValidationRule>